# ns3-ai

./: CMakeLists.txt  CONTEXT.md  README.md  protobuf-generate.cmake
.github/workflows/: ci.yml
docs/: compatibility.md  install.md  multi-agent-parallel-env.md  using-pure-cpp.md
docs/adr/: 0001-explicit-shared-memory-session-lifecycle.md  0002-python-message-interface-wrapper-boundary.md  0003-std-atomic-sync-backend.md  0004-struct-schema-metadata-over-gym-protobuf.md  0005-heartbeat-protocol.md  0006-transport-abstract-class.md  0007-transport-capabilities-enum-graded.md  0008-multi-lane-transport-compositor.md  0009-queue-transport-ring-buffer.md
examples/: CMakeLists.txt
examples/a-plus-b/: CMakeLists.txt  README.md
examples/a-plus-b/use-gym/: apb.py
examples/a-plus-b/use-msg-stru/: apb.cc  apb.h  apb_py.cc
examples/a-plus-b/use-msg-vec/: apb.cc  apb.h  apb.py  apb_py.cc
examples/a-plus-b/use-multi-agent-gym/: apb.cc  apb.py
examples/lte-cqi/: CMakeLists.txt
examples/lte-cqi/use-msg/: cqi-dl-env.cc  cqi-dl-env.h  lte_cqi_py.cc
examples/multi-bss/vr-app/model/: burst-sink.h
examples/rl-tcp/: CMakeLists.txt
examples/rl-tcp/use-msg/: rl_tcp_py.cc  tcp-rl-env.cc  tcp-rl-env.h
model/gym-interface/: messages.proto  ns3-ai-gym-msg.h
model/gym-interface/cpp/: ns3-ai-gym-env.cc  ns3-ai-gym-env.h  ns3-ai-gym-interface.cc  ns3-ai-gym-interface.h  ns3-ai-vector-gym-env.cc  ns3-ai-vector-gym-env.h
model/gym-interface/py/: CMakeLists.txt  msg_py_binding.cc  setup-build.py.in  setup.py
model/gym-interface/py/ns3ai_gym_env/envs/: __init__.py  ns3_environment.py  ns3_vector_environment.py
model/msg-interface/: README.md  ns3-ai-errors.h  ns3-ai-msg-interface.h  ns3-ai-pybind-errors.h  ns3-ai-pybind-schema.h  ns3-ai-semaphore.h
model/transport/: ns3-ai-queue-transport.cc  ns3-ai-queue-transport.h  ns3-ai-transport.h
python_utils/: ns3ai_utils.py
python_utils/tests/: test_ns3ai_gym_env_mock.py  test_ns3ai_utils_integration.py  test_ns3ai_utils_lifecycle.py
test/: msg-interface-session-lifecycle-test-suite.cc  ns3-ai-error-test-suite.cc  ns3-ai-gym-lifecycle-test-suite.cc  ns3-ai-l2-integration-test-suite.cc  ns3-ai-schema-validation-test-suite.cc  ns3-ai-semaphore-test-suite.cc
